--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <div class="container">
         <div class="short-container">
           <p class="text">онлайн курс</p>
-          <p class="text">Старт Завтра</p>
+          <p class="text">
+            Старт <span id="dateElement"></span> <span id="monthElement"></span>
+          </p>
         </div>
       </div>
     </header>
@@ -110,7 +112,7 @@
                   height="75"
               /></picture>
               <p class="btn-sale-text">
-                знижка <br />
+                скидка <br />
                 <span>-90%</span>
               </p>
             </div>
@@ -377,7 +379,7 @@
                     height="75"
                 /></picture>
                 <p class="btn-sale-text">
-                  знижка <br />
+                  скидка <br />
                   <span>-90%</span>
                 </p>
               </div>
@@ -780,7 +782,7 @@
                     height="75"
                 /></picture>
                 <p class="btn-sale-text">
-                  знижка <br />
+                  скидка <br />
                   <span>-90%</span>
                 </p>
               </div>
@@ -1021,7 +1023,7 @@
                   height="75"
               /></picture>
               <p class="btn-sale-text">
-                знижка <br />
+                скидка <br />
                 <span>-90%</span>
               </p>
             </div>
@@ -1313,6 +1315,7 @@
           height="auto"
       /></picture>
     </footer>
+    <script type="module" src="./src/js/changeDate.js"></script>
     <script type="module" src="./src/js/timer.js"></script>
     <script src="./src/js/marquee.js" type="module"></script>
     <script type="module" src="./src/js/program.js"></script>
