--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               </p>
             </li>
           </ul>
-          <a class="btn-link-container" href="" target="_blank" rel="nofollow">
+          <a class="btn-link-container" href="#buy">
             <p class="btn-link">Присоединиться</p>
             <div class="btn-star-container">
               <picture
@@ -344,7 +344,7 @@
               Вы сами выбираете удобное время и темп прохождения материалов
             </li>
           </ul>
-          <p class="text">
+          <p class="text" id="buy">
             Этот курс создан для тех, кто хочет найти своё дело, которое
             приносит радость, удовлетворение и финансовую стабильность
           </p>
@@ -355,7 +355,13 @@
           </div>
           <div class="price-inner-container">
             <p class="price"><span>€80</span> €8</p>
-            <a
+            <div class="form">
+              <script
+                type="module"
+                src="https://kwiga.com/build/js/kwiga-widget.js?t=1738155818000&uuid=452baee0-38b8-4177-9dcc-2fd990fa06a8&producer=https://kwiga.com/"
+              ></script>
+            </div>
+            <!-- <a
               class="btn-link-container"
               href=""
               target="_blank"
@@ -383,7 +389,7 @@
                   <span>-90%</span>
                 </p>
               </div>
-            </a>
+            </a> -->
           </div>
           <div class="marquee-container">
             <p class="marquee-text">успейте купить со скидкой 90%</p>
@@ -758,12 +764,7 @@
         <div class="container">
           <div class="price-inner-container">
             <p class="price"><span>€80</span> €8</p>
-            <a
-              class="btn-link-container"
-              href=""
-              target="_blank"
-              rel="nofollow"
-            >
+            <a class="btn-link-container" href="#buy">
               <p class="btn-link">купить курс</p>
               <div class="btn-star-container">
                 <picture
@@ -1004,7 +1005,7 @@
               </p>
             </li>
           </ul>
-          <a class="btn-link-container" href="" target="_blank" rel="nofollow">
+          <a class="btn-link-container" href="#buy">
             <p class="btn-link">купить курс</p>
             <div class="btn-star-container">
               <picture
@@ -1264,10 +1265,14 @@
     <footer class="footer">
       <div class="container">
         <div class="fop-box">
-          <p class="name">фоп</p>
-          <p class="code">ипн 00000000</p>
+          <p class="name">JDG Diana Panfilova</p>
+          <p class="code">NIP 9571169435</p>
         </div>
-        <a class="mail-container" href="mailto:" rel="nofollow" target="_blank"
+        <a
+          class="mail-container"
+          href="mailto:Panfilova.coach@gmail.com"
+          rel="nofollow"
+          target="_blank"
           ><img
             src="./src/img/footer-mail.svg"
             width="15"
